--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,8 @@
 	},
 	"remoteUser": "vscode",
 	"mounts": [
-		"source=${localEnv:HOME}/.config,target=/home/vscode/.config,type=bind,consistency=cached"
+		"source=${localEnv:HOME}/.config,target=/home/vscode/.config,type=bind,consistency=cached",
+		"source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
 	  ],
 	"containerEnv": {
 		"GOOGLE_APPLICATION_CREDENTIALS":"/home/vscode/.config/gcloud/application_default_credentials.json",
