--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,12 +19,12 @@
 	"remoteUser": "vscode",
 	"mounts": [
 		"source=${localEnv:HOME}/.config,target=/home/vscode/.config,type=bind,consistency=cached",
-		"source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
+		"source=${localEnv:HOME}/.ssh,target=/tmp/.ssh,type=bind,consistency=cached"
 	  ],
 	"containerEnv": {
 		"GOOGLE_APPLICATION_CREDENTIALS":"/home/vscode/.config/gcloud/application_default_credentials.json",
 		"CLOUDSDK_CONFIG": "/home/vscode/.config/gcloud"
 	},
 	"postCreateCommand": "pip3 install -r .devcontainer/requirements.txt",
-	"postStartCommand": "pre-commit install"
+	"postStartCommand": "pre-commit install && cp -r /tmp/.ssh/* /home/vscode/.ssh"
 }
