--- a/{{ cookiecutter.project_name }}/.devcontainer/devcontainer.json
+++ b/{{ cookiecutter.project_name }}/.devcontainer/devcontainer.json
@@ -18,12 +18,13 @@
 	},
 	"remoteUser": "vscode",
 	"mounts": [
-		"source=${localEnv:HOME}/.config,target=/home/vscode/.config,type=bind,consistency=cached"
+		"source=${localEnv:HOME}/.config,target=/home/vscode/.config,type=bind,consistency=cached",
+		"source=${localEnv:HOME}/.ssh,target=/tmp/.ssh,type=bind,consistency=cached"
 	  ],
 	"containerEnv": {
 		"GOOGLE_APPLICATION_CREDENTIALS":"/home/vscode/.config/gcloud/application_default_credentials.json",
 		"CLOUDSDK_CONFIG": "/home/vscode/.config/gcloud"
 	},
 	"postCreateCommand": "pip3 install -r .devcontainer/requirements.txt",
-	"postStartCommand": "pre-commit install"
+	"postStartCommand": "pre-commit install && cp -r /tmp/.ssh/* /home/vscode/.ssh"
 }
