--- a/{{ cookiecutter.project_name }}/.devcontainer/devcontainer.json
+++ b/{{ cookiecutter.project_name }}/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "cookiecutter-bq-ml",
+	"name": "cookiecutter-bqml",
 	"image": "eu.gcr.io/cts-public-images-1/cts-standard:latest",
 	"customizations": {
 		"vscode": {
