--- a/{{ cookiecutter.project_name }}/infra/config/bigquery.yaml
+++ b/{{ cookiecutter.project_name }}/infra/config/bigquery.yaml
@@ -1,6 +1,6 @@
 bigquery:
   datasets:
-  - name: staging
+  - name: iowa_demo
     location: '{{ cookiecutter.region }}'
     create: true
     friendly_name: staging
